# Project_FASTapi

./: items_views.py  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/products/: crud.py  schemas.py  views.py
core/: settings.py
core/models/: __init__.py  base.py  db_helper.py  product.py
users/: schemas.py  views.py
